samples/invalid/syntax/bad_language_decl.g
language g0
  answer = 42
